--- a/front/src/app/home/search/search.component.html
+++ b/front/src/app/home/search/search.component.html
@@ -1,26 +1,39 @@
-<section class="searchbar">
-  <div class="d-flex searchbox">
-    <input
-      class="form-control"
-      type="text"
-      placeholder="Search the Blog"
-      aria-label="Search the Blog"
-      aria-describedby="button-search"
-      #searchText
-    />
-    <button
-      class="btn btn-success"
-      id="button-search"
-      type="button"
-      (click)="searchBlog(searchText.value)"
-    >
-      Search
-    </button>
-  </div>
-  <!-- showing results -->
-  <div class="text-center mt-2 p-1" id="showingResults" *ngIf="showResults">
-    <span class=""> Showing results for </span>
-    <br />
-    <h4>{{ searchTerm }}</h4>
-  </div>
+<section class="main">
+  <section class="searchbar">
+    <div class="d-flex searchbox">
+      <input
+        class="form-control"
+        type="text"
+        placeholder="Search the Blog"
+        aria-label="Search the Blog"
+        aria-describedby="button-search"
+        #searchText
+      />
+      <button
+        class="btn btn-success"
+        id="button-search"
+        type="button"
+        (click)="searchBlog(searchText.value)"
+      >
+        Search
+      </button>
+    </div>
+    <!-- showing results -->
+    <div class="text-center mt-2 p-1" id="showingResults" *ngIf="showResults">
+      <span class=""> Showing results for </span>
+      <br />
+      <h4>{{ searchTerm }}</h4>
+    </div>
+  </section>
+
+  <section class="search_result">
+    <div class="row" *ngIf="showResults">
+      <div class="col-md-3" *ngFor="let blog of currentPosts">
+        <div class="card card-body bg-light">
+          <h2>{{ blog.title }}</h2>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </section>
 </section>
