--- a/front/src/app/home/create-post/create-post.component.css
+++ b/front/src/app/home/create-post/create-post.component.css
@@ -1,10 +1,24 @@
 #writeBlog {
   padding-top: 6%;
+  /* padding-inline: 200px; */
 }
 
 input,
-textarea {
+textarea,
+.tags {
   max-width: 70%;
+}
+
+.tag-label {
+  width: 70%;
+  text-align: left;
+  text-decoration: underline;
+  font-size: 1.1em;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .title {
