--- a/front/src/app/home/search/search.component.css
+++ b/front/src/app/home/search/search.component.css
@@ -7,7 +7,7 @@
 }
 
 /* To create the merged feeling */
-.searchbar input {
+/* .searchbar input {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -16,7 +16,7 @@
   margin-left: -1px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-}
+} */
 
 #showingResults {
   background-color: rgb(229, 243, 220);
@@ -28,4 +28,28 @@
 
 .row {
   row-gap: 2em;
+}
+
+.filter {
+  padding-inline: 20%;
+}
+
+.filter button {
+  /* text-decoration: underline; */
+}
+
+.filter button:hover {
+  text-decoration: underline;
+}
+
+.tag-label {
+  /* width: 70%; */
+  text-align: left;
+  text-decoration: underline;
+  font-size: 1.1em;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
 }
