--- a/front/src/app/home/create-post/create-post.component.html
+++ b/front/src/app/home/create-post/create-post.component.html
@@ -57,18 +57,6 @@
         required
       />
       <!-- Tag selection -->
-      <div class="tag-label">Tags</div>
-      <div class="tags">
-        <div *ngFor="let tag of tags" class="m-1 mt-0">
-          <input
-            type="checkbox"
-            [value]="tag.name"
-            formControlName="temp"
-            (change)="controlOnChange($event)"
-          />
-          {{ tag.name }}
-        </div>
-      </div>
 
       <!--  -->
 
@@ -89,7 +77,6 @@
     </div>
 
     <div class="text-center mt-3">
-      <button class="btn btn-success me-3">Submit</button>
       <!-- Upload Images -->
       <button
         class="btn me-3"
@@ -107,72 +94,44 @@
         (change)="uploadImage($event)"
         #uploadImages
       />
-      <button class="btn btn-warning" (click)="clearAll()" type="button">
-        Clear All
-      </button>
     </div>
   </form>
+  <!-- <div class="tags-section">
+    <div class="tag-label">Tags</div>
+    <div class="tags">
+      <div *ngFor="let tag of tags" class="m-1 mt-0">
+          <input
+            type="checkbox"
+            [value]="tag.name"
+            formControlName="temp"
+            (change)="controlOnChange($event)"
+          />
+          {{ tag.name }}
+        </div>
+      <div *ngFor="let tag of tags" class="m-1 mt-0">
+        <input type="checkbox" [value]="tag.name" [(ngModel)]="tag.selected" />
+        {{ tag.name }}
+        (change)="controlOnChange($event)"
+      </div>
+    </div>
+  </div> -->
+  <section class="filter">
+    <div class="tag-label">Tags</div>
+    <div class="tags">
+      <div *ngFor="let tag of tags" class="m-1 mt-0">
+        <input type="checkbox" [value]="tag.name" [(ngModel)]="tag.selected" />
+        {{ tag.name }}
+      </div>
+    </div>
+  </section>
+</section>
+<section class="text-center">
+  <button class="btn btn-success me-3" (click)="submitBlog()">Submit</button>
+  <button class="btn btn-warning" (click)="clearAll()" type="button">
+    Clear All
+  </button>
 </section>
 <br />
 <!-- testing -->
 <!-- <div [innerHTML]="test"></div> -->
 <!-- <img [src]="testing" /> -->
-
-<!-- Modal -->
-<!-- <div
-  class="modal fade"
-  id="exampleModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Upload Image</h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-          #closebutton
-        ></button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="myForm" (ngSubmit)="submit()">
-          <div class="form-group">
-            After change event is fired
-            <input
-              style="display: none"
-              formControlName="file"
-              id="file"
-              type="file"
-              accept="image/jpeg, image/png"
-              class="form-control"
-              (change)="onFileChange($event)"
-              (change)="closebutton.click()"
-              #uploadFile
-            />
-            <button class="btn btn-primary" (click)="uploadFile.click()">
-              Upload a File from your Device
-            </button>
-
-          </div>
-          <hr />
-          <div class="">
-            <input type="text" class="form-control" #urlFile />
-            <button
-              class="btn btn-primary"
-              (click)="urlUpload(urlFile)"
-              (click)="closebutton.click()"
-            >
-              Upload
-            </button>
-          </div>
-
-        </form>
-      </div>
-      <div class="modal-footer"></div>
-    </div>
-  </div>
-</div> -->
