--- a/front/src/app/home/create-post/create-post.component.html
+++ b/front/src/app/home/create-post/create-post.component.html
@@ -135,3 +135,8 @@
 <!-- testing -->
 <!-- <div [innerHTML]="test"></div> -->
 <!-- <img [src]="testing" /> -->
+<footer class="py-5 bg-dark mt-3">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+  </div>
+</footer>
