--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,9 +1,15 @@
 body {
   position: relative;
 }
-
+/* 
 footer {
-  /* position: absolute;
-  bottom: 0; */
+  position: absolute;
+  bottom: 0;
   margin-top: auto;
-}
+} */
+
+/* footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+} */
