--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -17,16 +17,21 @@ h1 {
 }
 
 #welcome {
-  padding-top: 5%;
+  /* padding-top: 5%; */
   /* padding-inline: 0; */
   color: #e8f0e6;
   /* border-color: rgb(0, 104, 74); */
-  background-color: rgb(0, 104, 74);
+  /* background-color: rgb(0, 104, 74); */
+  background-image: url(./2bgimg2kcopy.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
 
-  /* height: 50dvh; */
-  display: grid;
-  grid-template-columns: auto auto;
-  place-items: center;
+  height: 80dvh;
+  display: flex;
+  align-items: center;
+  /* grid-template-columns: auto auto; */
+  /* place-items: center; */
   padding-bottom: 40px;
 }
 
@@ -105,9 +110,16 @@ a {
 
 @media (max-width: 680px) {
   #welcome {
-    grid-template-columns: 1fr;
-    padding-top: 8%;
-    height: 100dvh;
+    /* color: rgb(48, 47, 47); */
+    /* grid-template-columns: 1fr; */
+    /* padding-top: 8%; */
+    height: 93dvh;
+    /* background-image: url(./mob2.jpg);
+    backdrop-filter: blur(6px);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: darken; */
   }
 
   .welcome_text {
