--- a/front/src/app/home/login/login.component.html
+++ b/front/src/app/home/login/login.component.html
@@ -69,6 +69,9 @@
         <div class="text-center">
           <a routerLink="../register">Register</a>
         </div>
+        <div class="text-center mt-3">
+          <a routerLink="../admin">Login for Admin</a>
+        </div>
       </div>
     </div>
     <!--  -->
@@ -80,6 +83,12 @@
     </div>
   </div>
 </section>
+
+<footer class="py-5 bg-dark mt-3">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+  </div>
+</footer>
 
 <!-- <section class="main">
   <div class="left">
