--- a/front/src/app/home/view-post/view-post.component.html
+++ b/front/src/app/home/view-post/view-post.component.html
@@ -57,3 +57,9 @@
     >
   </div>
 </section>
+
+<footer class="py-5 bg-dark mt-3">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
+  </div>
+</footer>
